apiproducts/tracks/tracks-v1-apiproduct-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: tracks-v1-apiproduct
  namespace: tracks
  labels:
    app: tracks-rest-api-1.0
  annotations:
    delegation.gateway.solo.io/inherit-parent-matcher: "true"
spec:
  rules:
    - matches:  
      - path:
          type: PathPrefix
          value: /
      filters:
      # Need to specify the URLRewrite here. The URLRewrite set on the parent route, although correctly configured on the proxy,
      # will prevent the APIDoc from being stitched by the Portal controller.
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
      backendRefs:
      - name: tracks-rest-api-1-0
        namespace: tracks
        port: 5000
      # backendRefs:
      # - group: gateway.networking.k8s.io
      #   kind: HTTPRoute
      #   name: tracks
      #   namespace: tracks
