apiproducts/tracks/tracks-v2-apiproduct-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: tracks-v2-apiproduct
  namespace: tracks
  labels:
    app: tracks-rest-api-2.0
  annotations:
    delegation.gateway.solo.io/inherit-parent-matcher: "true"
spec:
  rules:
    - matches:  
      - path:
          type: PathPrefix
          value: /
        method: GET
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
      backendRefs:
      - name: tracks-rest-api-1-0
        namespace: tracks
        port: 5000
